<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/roomsFragment"
        android:icon="@drawable/icon_chat"
        android:title="Rooms" />
    <item
        android:id="@+id/matchFragment"
        android:title="Match"
        android:icon="@drawable/icon_cart"/>
    <item
        android:id="@+id/profileFragment"
        android:title="Profile"
        android:icon="@drawable/icon_profile"/>


</menu>