<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/mock_camera_permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Allow Shopeer to access photos \nand media on your device?"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/mock_camera_permission_allow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mock_camera_permission_text"
        android:gravity="center"
        android:text="Allow"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/mock_camera_permission_deny_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mock_camera_permission_allow_button"
        android:text="Deny"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>